...
"action_title_edit_filters" = "Filters";

"action_title_delete" = "Delete";

"action_title_rename" = "Rename";

"action_title_markasfavorite" = "Mark as Favorite";

"action_title_markasunfavorite" = "Remove From Favorites";

"action_title_info" = "Info";

"action_title_filter" = "Filter by";

"action_title_sort" = "Sort by";
...
"action_title_openIn" = "Open with...";

"action_title_accept" = "Accept";

"action_title_schedule" = "Schedule";

"action_title_share" = "Share";


/********** Application Info **********/

"application_info" = "%@™ %@\n\nManagement tool and report viewer for TIBCO JasperReports Server %.1f and greater.\n\nFor more information visit:\nhttp://community.jaspersoft.com/project/jaspermobile-ios\n\nCopyright © 2005-%zd TIBCO Software, Inc.";

...

"repository_root_public" = "Public";


/********** Resource Info View  **********/

"resource_label_title" = "Name";

"resource_description_title" = "Description";

"resource_type_title" = "Type";

"resource_uri_title" = "URI";

"resource_version_title" = "Version";

"resource_creationDate_title" = "Creation Date";

"resource_modifiedDate_title" = "Modified Date";

"resource_format_title" = "Format";

"resources_type_reportUnit" = "Report";

"resources_type_dashboard" = "Dashboard";
...
