...
                        <constraints>
                            <constraint firstAttribute="width" constant="100" id="cOM-9j-vvE"/>
                        </constraints>
                    </imageView>
                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Resource Name" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="jfg-Gb-8OE"
                        <rect key="frame" x="108" y="5" width="197" height="40"/>
                        <accessibility key="accessibilityConfiguration" identifier="JMResourceCellResourceNameLabelAccessibilityId"/>
                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                        <nil key="highlightedColor"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="NO"/>
                        </userDefinedRuntimeAttributes>
...
